--- a/omikuji.html
+++ b/omikuji.html
@@ -13,10 +13,14 @@
         p {
             text-align: center;
             font-size: 1.2em;
+            margin-top: 100px;
         }
     </style>
 </head>
 <body>
-    <p>あなたの今年の運勢は、大吉です。</p>
+    <script>
+        document.write('<p>あなたの今年の運勢は、大吉です。</p>');
+    </script>
+    
 </body>
 </html>
