math.random()とmath.floor()

--- a/omikuji.html
+++ b/omikuji.html
@@ -19,6 +19,9 @@
 </head>
 <body>
     <script>
+        let kuji = Math.floor(Math.random() * 6);
+        console.log(kuji);
+
         document.write('<p>あなたの今年の運勢は、大吉です。</p>');
     </script>
     
