--- a/omikuji.html
+++ b/omikuji.html
@@ -19,10 +19,11 @@
 </head>
 <body>
     <script>
-        let kuji = Math.floor(Math.random() * 6);
+        let kujis = ['大吉', '吉', '吉', '吉', '中吉', '中吉', '小吉', '小吉', '小吉', '末吉', '末吉', '凶', '凶', '大凶'];
+        let kuji = Math.floor(Math.random() * kujis.length);
         console.log(kuji);
 
-        document.write('<p>あなたの今年の運勢は、大吉です。</p>');
+        document.write('<p>あなたの今年の運勢は、' + kujis[kuji] + 'です。</p>');
     </script>
     
 </body>
